# Beancount-myTools

./: .Famille.beancount.picklecache  .Famille.beancount.swp  .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  Famille.beancount  Famille.import  Migration.md  README.md  conftest.py  create_env.sh  favahttps.user.js  generali.py  myAutoCommit.py  myutils.py  paperless_sync.py  pyproject.toml  requirements.txt  test_myutils.py
A_Importer/: 00040132901 (1).qif  00040132901 (4).qif  00040132901 (6).qif  00040754305.qif  10014570396.qif  10014935408 (3).qif  10014935408 (5).qif  10014935408 (6).qif  10014935408.qif  2006-12-05-Versement Libre.json  2007-01-19-Versement Libre.json  2007-02-10-prélèvement.json  2007-03-10-prélèvement.json  2007-03-26-Frais de gestion.json  2007-04-10-prélèvement.json  2007-05-10-Distribution de dividendes.json  2007-05-10-prélèvement.json  2007-06-10-prélèvement.json  2007-06-29-Frais de gestion.json  2007-07-10-prélèvement.json  2007-08-10-Distribution de dividendes.json  2007-08-10-prélèvement.json  2007-09-10-prélèvement.json  2007-09-17-Frais de gestion.json  2007-10-10-Versement Libre.json  2007-10-10-prélèvement.json  2007-11-10-prélèvement.json  2007-11-12-Distribution de dividendes.json  2007-12-10-prélèvement.json  2007-12-24-Frais de gestion.json  2008-01-10-prélèvement.json  2008-02-10-prélèvement.json  2008-02-11-Distribution de dividendes.json  2008-03-10-prélèvement.json  2008-03-24-Frais de gestion.json  2008-04-10-prélèvement.json  2008-05-10-prélèvement.json  2008-05-13-Distribution de dividendes.json  (+212 more)
(+78 files in other folders)
